--- a/Home.html
+++ b/Home.html
@@ -48,8 +48,10 @@
 
                 <ul class="actions">
                     <li>
-                        <a href="#one" class="button scrolly">Who?</a></li>
+                        <a href="#one" class="button scrolly">Who?</a>
+			</li>
                 </ul>
+		    <p> Oh yeah this looks much better on pc than mobile </p>
             </div>
         </section>
 
