--- a/Home.html
+++ b/Home.html
@@ -20,6 +20,7 @@
     <section id="sidebar">
         <div class="inner">
             <nav>
+		    <p> This looks a lot better on pc than mobile. My Bad. </p>
                 <ul>
                     <li><a href="#intro" class="scrolly">Welcome</a></li>
                     <li><a href="#one" class="scrolly">About</a></li>
