--- a/Home.html
+++ b/Home.html
@@ -1,231 +1,149 @@
-<!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Sanctuary </title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+    <title>ReFill</title>
+    <link rel="shortcut icon" href="img/iconRefillemoji.png" type="image/x-icon">
 </head>
 
-<body class="is-preload">
+<body id="page-top">
 
-    <!-- Sidebar -->
-    <section id="sidebar">
-        <div class="inner">
-            <nav>
-		    <p> This looks a lot better on pc than mobile. My Bad. </p>
-                <ul>
-                    <li><a href="#intro" class="scrolly">Welcome</a></li>
-                    <li><a href="#one" class="scrolly">About</a></li>
-                    <li><a href="#two" class="scrolly">Gallery</a></li>
-                    <li><a href="#three" class="scrolly">Sites</a></li>
-                    <li><a href="#four" class="scrolly">Projects</a></li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <img src="img/iconRefillemoji.png" style="height:50px; width:42px">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#services">Participate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                    </li>
                 </ul>
-            </nav>
-        </div>
-    </section>
-
-    <!-- Wrapper -->
-    <div id="wrapper">
-        <!-- Intro -->
-        <section id="intro" class="wrapper style1 fullscreen fade-up">
-            <video autoplay loop id="vid">
-                <source src="images\My Movie 8.mp4" type="video/mp4" width="1040">
-            </video>
-            <div class="inner">
-
-                <div class="overlay">
-                    <h1>Greetings</h1>
-                    <p>Website? Nah, more of a glorified linktree.<br /> And a bit about Farzad too.
-                    </p>
-                </div>
-
-                <ul class="actions">
-                    <li>
-                        <a href="#one" class="button scrolly">Who?</a>
-			</li>
-                </ul>
-		    <p> Oh yeah this looks much better on pc than mobile </p>
             </div>
-        </section>
+        </div>
+    </nav>
 
-        <!-- One -->
-        <section id="one" class="wrapper style2 spotlights">
-            <section>
-                <img src="images/me.jpg" style="padding-top: 10px; padding-left: 5px; width: 500px" alt="me lol" data-position="center center" />
-                <div class="content">
-                    <div class="inner">
-                        <h2>About Farzad</h2>
-                        <p> Hi! I'm Farzad, a senior at Waterloo Collegiate Institute and an avid programmer working very frequently with python and occasionally unity 3D (C# for scripting).
-                            <br>
-                            <br> Outside of class and programming, you'd find me playing video games, soccer, tennis or basketball with friends.
-                            <br>
-                            <br> Based in Waterloo, I often bike/skate around the city, so feel free to say hi! </p>
-                        <!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
+
+
+    <!-- <video autoplay loop id="vid">
+        <source src="img/Film.mp4" type="video/mp4">
+    </video> -->
+
+    <header>
+        <div class="overlay"></div>
+        <video playsinline="playsinline" autoplay="autoplay" loop="loop">
+          <source src="img/Film.mp4" type="video/mp4">
+        </video>
+        <div class="container h-100">
+            <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                    <h1 class="display-3">Introducing <img src="img/iconReFill.png" style="height:200px;width:400px"></h1>
+                    <p class="lead mb-0">Your Future Snack Solution</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section id="about">
+
+        <body style="background-color:powderblue;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 style="color:#047269fb">What is ReFill?</h2>
+                        <p class="lead" style="color:#047269fb">ReFill is a platform that allows users to choose whatever pantry snacks they want from their local grocery stores and have them shipped to their homes on a customizable subscription schedule. Your snack choices, your schedule.
+                        </p>
+                        <ul style="color:#047269fb">
+                            <li>Have regular meetings? Use ReFill to save time from your busy schedule and keep your colleagues' brains stimulated</li>
+                            <li>Working hard with a busy schedule at school? Watch for your ReFill shipment and keep on the grind</li>
+                            <li>Many diet-affecting diseases require regular consumption of special dietary ingredients. Allow ReFill to provide nutritious snacks without the hassle of going out.</li>
+
                         </ul>
                     </div>
                 </div>
-            </section>
-        </section>
+            </div>
+    </section>
 
-        <!-- Two -->
-        <section id="two" class="wrapper style2 spotlights">
-            <section>
+    <section id="services">
+
+        <body style="background-color:powderblue;">
+            <div class="container">
                 <div class="row">
-                    <div class="column">
-                        <img src="images/columbia.jpeg " class="gallery__img " style="padding-top: 10px; padding-left: 5px; padding-right: 5px; " alt="Columbia Lake" height="300 " width=" 346 ">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 style="color:#047269fb">Wanna Help Out?</h2>
+                        <p class="lead" style="color:#047269fb">Don't be afraid to take this short survey that can help us shape our solution to perfectly cater to whatver bothers you. ReFill is for the people and this helps us understand what you want to see change.</p>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd5ExKaaabHBzkqEryl-ZmvkFwkEcRgOW3mwG4SN1B5uPk60Q/viewform?usp=sf_link" width="640" height="1732" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                     </div>
-                    <div class="column">
-                        <img src="images/bruh.jpg " class="gallery__img " style="padding-top: 10px; padding-right: 5px; " height="300 " alt="The Boys :( " width=" 346 ">
-                    </div>
-                    <div class="column">
-                        <img src="images/Hamilton.JPG " class="gallery__img " style="padding-top: 10px;  padding-right: 10px; " width="250" height="300">
-                    </div>
-                    <div class="column">
-                        <img src="images/IMG_5631.jpg " class="gallery__img " style="padding-top: 10px; padding-left: 5px; padding-right: 5px; " height="233 " alt="Victoria BC " width=" 346 ">
-                    </div>
-                    <div class="column">
-                        <img src="images/grass.jpg " class="gallery__img " style="padding-top: 10px; padding-left: 5px; padding-right: 5px; " height="233 " alt="Victoria BC " width=" 346 ">
-                    </div>
-                    <div class="column">
-                        <a href="https://www.instagram.com/zad._r/">
-                            <img src="images/IG.png " class="gallery__img " style="padding-top: 10px; padding-left: 5px; padding-right: 5px; " height="233 " alt="Victoria BC " width=" 233 ">
-                        </a>
-                    </div>
-            </section>
-        </section>
-
-        <!--three-->
-        <section id="three" class="wrapper style3 fade up">
-            <div class="inner ">
-                <h2>Other Sites</h2>
-                <p>Check out some other sites to get to know more about me. </p>
-                <div class="features ">
-
-                    <section>
-                        <span>
-                            <a href="https://github.com/FarzadR-Dev?tab=repositories">
-                                <img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="My GitHub" style="width:60px" style="height:60px">
-                            </a>
-                        </span>
-                        <h3>My Github</h3>
-                        <p>That's where I upload any developer projects I had worked on including school projects. Still got more to upload and more to work on. </p>
-                    </section>
-
-                    <section>
-                        <span>
-                        <a href="https://www.linkedin.com/in/farzad-rahman-929ab5191">
-                            <img src="https://image.flaticon.com/icons/png/512/174/174857.png" alt="My LinkedIn" style="width:60px" style="height:60px">
-                        </a>
-                    </span>
-                        <h3>My LinkedIn</h3>
-                        <p>Feel free to see my LinkedIn profile and connect with my professional side.</p>
-                    </section>
-
-                    <section>
-                        <span>
-                            <a href="mailto:farzadrahman20@gmail.com">
-                                <img src="https://assets.stickpng.com/images/5847fafdcef1014c0b5e48ce.png" alt="Email" style="width:60px" style="height:60px">
-                            </a>
-                        </span>
-                        <h3>Email</h3>
-                        <p>Reach me by email by sending to farzadrahman20@gmail.com </p>
-                    </section>
-
-                    <section>
-                        <span>
-                            <a href="https://www.instagram.com/zad._r/">
-                                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png" alt="Instagram" style="width:60px" style="height: 60px">
-                            </a>
-                        </span>
-                        <h3>Instagram</h3>
-                        <p>Yeah you know</p>
-                    </section>
-
-                    <section>
-                        <span>
-                            <a href="https://www.facebook.com/profile.php?id=100007856446681">
-                                <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-3-logo-png-transparent.png" alt="Facebook" style="width:60px" style="height: 60px">
-                            </a>
-                        </span>
-                        <h3>Facebook</h3>
-                    </section>
-
-                    <section>
-                        <span>
-                            <a href="https://refillonline.github.io/">
-                                <img src="images/ReFillIcon" alt="Solution" style="width:200px" style="height: 200px">
-                            </a>
-                        </span>
-                        <h3>ReFill</h3>
-                        <p>Okay now this is actually a cool thing in the works right now. You'll be really excited if you are invovled in any way.</p>
-                    </section>
                 </div>
             </div>
-        </section>
+        </body>
+    </section>
 
-        <!-- four -->
-        <section id="four" class="wrapper style3 fade up">
-            <div class="inner ">
-                <h2>Some Projects</h2>
-                <p>Here are links to some projects I worked on.</p>
-                <div class="features ">
-
-                    <section>
-                        <span>
-                            <a href="https://github.com/FarzadR-Dev/GameJam2020-WON-AWARD-">
-                                <img src="images/Winner.jpg" alt="Game Jam Award" style="width:200px" style="height:60px">
-                            </a>
-                        </span>
-                        <h3>UW Games Institute Game Jam Project</h3>
-                        <p>In June 2020, my friends and I entered a game jam (hackathon where you create a game in short time) hosted by the University of Waterloo's Games Institute. I was one of the lead developers on our team where we somehow won an award.
-                            Might get a demo out???</p>
-                    </section>
-
-                    <section>
-                        <span>
-                        <a href="https://github.com/FarzadR-Dev/Processing-Quiz">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Processing_Logo_Clipped.svg/1200px-Processing_Logo_Clipped.svg.png" alt="My First Big Project" style="width:150px" style="height:150px">
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2 style="color:#047269fb">Contact Me!</h2>
+                    <p class="lead" style="color:#047269fb"> Feel free to contact Farzad for any inquiry!
+                        <br>
+                        <a href="https://mail.google.com/mail/u/?authuser=farzadrahman20@gmail.com">
+                            <img src="img/mail.png" alt="Email" style="width:50px" style="height:50px" style="padding-top: 30px;">
                         </a>
-                    </span>
-                        <h3>Processing.JS Quiz</h3>
-                        <p>Possibly my first big project. In 10th grade for my CS summative I had to create an interactive quiz game. Had to flex on my classmates with the on screen clickables and music and stuff. Good times.</p>
-                    </section>
-
-                    <section>
-                        <span>
-                            <a href="https://github.com/FarzadR-Dev/CovidStatsSummaryGenerator">
-                                <img src="images/covid.png" alt="Email" style="width:200px" style="height:60px">
-                            </a>
-                        </span>
-                        <h3>Covid Stats Generator</h3>
-                        <p>*sigh* Yeah it was for an assignment I had in grade 11. I had to create a program that made stats by reading a file. So I decided to make my program read this reaaaaallllyyyyy looooooonggg files with covid stats where it outputs
-                            a new file with stats that the user asked for. </p>
-                    </section>
-
-                    <section>
-                        <p>I might add more here, and possibly more to GitHub. It's just that a lot of my projects on my computer are a lot more boring.</p>
-                    </section>
-
+                        <a href="https://www.linkedin.com/in/farzad-rahman-929ab5191/ ">
+                            <img src="https://image.flaticon.com/icons/png/512/174/174857.png" alt="LinkedIN" style="width:50px" style="height:50px" style="padding-top: 30px;">
+                        </a>
+                    </p>
                 </div>
+            </div>
+        </div>
+        </body>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white"></p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom JavaScript for this theme -->
+    <script src="js/scrolling-nav.js"></script>
 
 
 
-                <!-- Scripts -->
-                <script src="assets/js/jquery.min.js "></script>
-                <script src="assets/js/jquery.scrollex.min.js "></script>
-                <script src="assets/js/jquery.scrolly.min.js "></script>
-                <script src="assets/js/browser.min.js "></script>
-                <script src="assets/js/breakpoints.min.js "></script>
-                <script src="assets/js/util.js "></script>
-                <script src="assets/js/main.js "></script>
+
 
 </body>
 
