--- a/Home.html
+++ b/Home.html
@@ -8,142 +8,76 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <title> Sanctuary </title>
+    <link rel="shortcut icon" href="C:\Users\farza\OneDrive\Desktop\PersonalSite\img\logo.png" type="image/x-icon">
 
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/the-big-picture.css" rel="stylesheet">
 
-    <title>ReFill</title>
-    <link rel="shortcut icon" href="img/iconRefillemoji.png" type="image/x-icon">
+
+
 </head>
 
-<body id="page-top">
+<body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <img src="img/iconRefillemoji.png" style="height:50px; width:42px">
+            <a class="navbar-brand" href="home.html">
+                <img src="img\logo.png" alt="zad" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="home.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Participate</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                        <a class="nav-link" href="Productivity.html">Sites</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="work.html">Few Projects</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
 
 
+    <video autoplay loop id="vid">
+        <source src="img/My Movie 8.mp4" type="video/mp4">
+    </video>
 
-    <!-- <video autoplay loop id="vid">
-        <source src="img/Film.mp4" type="video/mp4">
-    </video> -->
-
-    <header>
-        <div class="overlay"></div>
-        <video playsinline="playsinline" autoplay="autoplay" loop="loop">
-          <source src="img/Film.mp4" type="video/mp4">
-        </video>
-        <div class="container h-100">
-            <div class="d-flex h-100 text-center align-items-center">
-                <div class="w-100 text-white">
-                    <h1 class="display-3">Introducing <img src="img/iconReFill.png" style="height:200px;width:400px"></h1>
-                    <p class="lead mb-0">Your Future Snack Solution</p>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section id="about">
-
-        <body style="background-color:powderblue;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 style="color:#047269fb">What is ReFill?</h2>
-                        <p class="lead" style="color:#047269fb">ReFill is a platform that allows users to choose whatever pantry snacks they want from their local grocery stores and have them shipped to their homes on a customizable subscription schedule. Your snack choices, your schedule.
-                        </p>
-                        <ul style="color:#047269fb">
-                            <li>Have regular meetings? Use ReFill to save time from your busy schedule and keep your colleagues' brains stimulated</li>
-                            <li>Working hard with a busy schedule at school? Watch for your ReFill shipment and keep on the grind</li>
-                            <li>Many diet-affecting diseases require regular consumption of special dietary ingredients. Allow ReFill to provide nutritious snacks without the hassle of going out.</li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <section id="services">
-
-        <body style="background-color:powderblue;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 style="color:#047269fb">Wanna Help Out?</h2>
-                        <p class="lead" style="color:#047269fb">Don't be afraid to take this short survey that can help us shape our solution to perfectly cater to whatver bothers you. ReFill is for the people and this helps us understand what you want to see change.</p>
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd5ExKaaabHBzkqEryl-ZmvkFwkEcRgOW3mwG4SN1B5uPk60Q/viewform?usp=sf_link" width="640" height="1732" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                    </div>
-                </div>
-            </div>
-        </body>
-    </section>
-
-    <section id="contact">
+    <!-- Page Content -->
+    <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 style="color:#047269fb">Contact Me!</h2>
-                    <p class="lead" style="color:#047269fb"> Feel free to contact Farzad for any inquiry!
-                        <br>
-                        <a href="https://mail.google.com/mail/u/?authuser=farzadrahman20@gmail.com">
-                            <img src="img/mail.png" alt="Email" style="width:50px" style="height:50px" style="padding-top: 30px;">
-                        </a>
-                        <a href="https://www.linkedin.com/in/farzad-rahman-929ab5191/ ">
-                            <img src="https://image.flaticon.com/icons/png/512/174/174857.png" alt="LinkedIN" style="width:50px" style="height:50px" style="padding-top: 30px;">
-                        </a>
-                    </p>
+                <div class="col-lg-6">
+                    <h1 class="mt-5" style="color:#dcc9ecfb">
+                        Welcome!
+                    </h1>
+                    <p style="color:#dcc9ecfb">Currently a project on hold, this website for now just works as a portal to Farzad's accounts on other sites.</p>
                 </div>
             </div>
         </div>
-        </body>
     </section>
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white"></p>
-        </div>
-        <!-- /.container -->
-    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom JavaScript for this theme -->
-    <script src="js/scrolling-nav.js"></script>
-
-
-
-
 
 </body>
 
