--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
                         <h2>About Farzad</h2>
                         <p> Hi! I'm Farzad, a senior at Waterloo Collegiate Institute and an avid programmer working very frequently with java, python and occasionally unity 3D (C# for scripting).
                             <br>
-                            <br> Outside of class and programming, you'd find me playing video games, soccer, tennis or basketball with friends.
+                            <br> Outside of class and programming, you'd find me playing video games, soccer, tennis or basketball with friends. I also play piano, violin, guitar and sometimes produce with a launchpad mkII for fun.
                             <br>
                             <br> Based in Waterloo, I often bike/skate around the city, so feel free to say hi! </p>
                         <!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
