--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,7 @@
         </section>
 
         <!-- One -->
-        <section id="one" class="wrapper style2 spotlights">
+        <section id="one" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
                 <img src="images/me.jpg" style="padding-top: 10px; padding-left: 5px; width: 500px" alt="me lol" data-position="center center" />
                 <div class="content">
@@ -73,7 +73,7 @@
         </section>
 
         <!-- Two -->
-        <section id="two" class="wrapper style2 spotlights">
+        <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
                 <div class="row">
                     <div class="column">
@@ -100,7 +100,7 @@
         </section>
 
         <!--three-->
-        <section id="three" class="wrapper style3 fade up">
+        <section id="three" style="background-color: #062a38b0;" class="wrapper style3 fade up">
             <div class="inner ">
                 <h2>Other Sites</h2>
                 <p>Check out some other sites to get to know more about me. </p>
@@ -169,7 +169,7 @@
         </section>
 
         <!-- four -->
-        <section id="four" class="wrapper style3 fade up">
+        <section id="four" style="background-color: #062a38b0;" class="wrapper style3 fade up">
             <div class="inner ">
                 <h2>Some Projects</h2>
                 <p>Here are links to some projects I worked on.</p>
