--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
 <body class="is-preload">
 
     <!-- Sidebar -->
-    <section id="sidebar">
+    <section id="sidebar" style="background-color: #3c0c94b0;">
         <div class="inner">
             <nav>
                 <ul>
