--- a/Home.html
+++ b/Home.html
@@ -35,8 +35,8 @@
     <div id="wrapper">
         <!-- Intro -->
         <section id="intro" class="wrapper style1 fullscreen fade-up">
-            <video autoplay loop id="vid">
-                <source src="images\My Movie 8.mp4" type="video/mp4" width="1040">
+            <video autoplay="autoplay" loop="loop" id="vid">
+                <source src="images/vid.mp4" type="video/mp4" width="1040">
             </video>
             <div class="inner">
 
