--- a/Home.html
+++ b/Home.html
@@ -199,7 +199,7 @@
                     <section>
                         <span>
                             <a href="https://github.com/FarzadR-Dev/CovidStatsSummaryGenerator">
-                                <img src="images/covid.png" alt="Email" style="width:200px" style="height:60px">
+                                <img src="images/covid.png" alt="covidstats" style="width:200px" style="height:60px">
                             </a>
                         </span>
                         <h3>Covid Stats Generator</h3>
@@ -208,7 +208,12 @@
                     </section>
 
                     <section>
-                        <p>I might add more here, and possibly more to GitHub. It's just that a lot of my projects on my computer are a lot more boring.</p>
+                        <span>
+                            <a href="https://devpost.com/software/disgraph?ref_content=user-portfolio&ref_feature=in_progress">
+                                <img src="images/DisGraph.png" alt="HTN2020" style="width:200px" style="height:60px">
+                            </a>
+                        </span>
+                        <p>Hack the North 2020++ Submission: A discord bot which can quickly generate a visual representation of a dataset through a discord server, as it is a common medium in which people use to communicate with. </p>
                     </section>
 
                 </div>
