--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
     </style>
 
-    <title>ようこそ</title>
+    <title>Splash!</title>
     <link rel="shortcut icon" href="images\logo.png" type="image/x-icon">
 
 </head>
