--- a/Home.html
+++ b/Home.html
@@ -164,6 +164,19 @@
                         <h3>ReFill</h3>
                         <p>Okay now this is actually a cool thing in the works right now. You'll be really excited if you are invovled in any way.</p>
                     </section>
+			
+			<section class="center" style="padding-left: 15%;">
+
+                        <a href="https://www.youtube.com/channel/UCxgxN6_o2_jEU_4zAKd91pA">
+                            <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" alt="YouTube" style="width:200px" style="height: 200px">
+                        </a>
+                        </span>
+                        <h3>YouTube Channel</h3>
+                        <p>Its just full of my English class assignments now :)</p>
+
+                        <span>
+                            
+                    </section>
                 </div>
             </div>
         </section>
