--- a/Home.html
+++ b/Home.html
@@ -162,7 +162,7 @@
                             </a>
                         </span>
                         <h3>ReFill</h3>
-                        <p>Okay now this is actually a cool thing in the works right now. You'll be really excited if you are invovled in any way.</p>
+                        <p>Okay now this is actually a cool thing in the works right now. You'll be really excited if you are involved in any way.</p>
                     </section>
 			
 			<section class="center" style="padding-left: 15%;">
