--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
                 </div>
             </section>
         </section>
-
+<!-- 
         <!-- Two -->
         <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
@@ -97,7 +97,7 @@
                         </a>
                     </div>
             </section>
-        </section>
+        </section> -->
 
         <!--three-->
         <section id="three" style="background-color: #062a38b0;" class="wrapper style3 fade up">
