--- a/Home.html
+++ b/Home.html
@@ -71,9 +71,9 @@
                 </div>
             </section>
         </section>
-<!-- 
+
         <!-- Two -->
-        <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
+<!--         <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
                 <div class="row">
                     <div class="column">
@@ -97,7 +97,7 @@
                         </a>
                     </div>
             </section>
-        </section> -->
+        </section>  -->
 
         <!--three-->
         <section id="three" style="background-color: #062a38b0;" class="wrapper style3 fade up">
