--- a/Home.html
+++ b/Home.html
@@ -138,7 +138,7 @@
 
                     <section>
                         <span>
-                            <a href="https://www.instagram.com/zad._r/">
+                            <a href="https://www.instagram.com/closezad/">
                                 <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png" alt="Instagram" style="width:60px" style="height: 60px">
                             </a>
                         </span>
