--- a/Home.html
+++ b/Home.html
@@ -60,7 +60,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>About Farzad</h2>
-                        <p> Hi! I'm Farzad, a senior at Waterloo Collegiate Institute going into Computer Engineering at the University Waterloo. I'm an avid programmer working very frequently with java, python and occasionally unity 3D (C# for scripting).
+                        <p> Hi! I'm Farzad, a senior at Waterloo Collegiate Institute going into Computer Engineering at the University of Waterloo. I'm an avid programmer working very frequently with java, python and occasionally unity 3D (C# for scripting).
                             <br>
                             <br> Outside of class and programming, you'd find me playing video games, soccer, tennis or basketball with friends. I also play piano, violin, guitar and sometimes produce with a launchpad mkII for fun.
                             <br>
