--- a/Home.html
+++ b/Home.html
@@ -219,6 +219,21 @@
                         <p>*sigh* Yeah it was for an assignment I had in grade 11. I had to create a program that made stats by reading a file. So I decided to make my program read this reaaaaallllyyyyy looooooonggg files with covid stats where it outputs
                             a new file with stats that the user asked for. </p>
                     </section>
+			
+			
+			<section>
+                        <span>
+                            <a href="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects">
+                                <img src="images/covid.png" alt="chAD" style="width:200px" style="height:60px">
+                            </a>
+                        </span>
+                        <h3>chAD</h3>
+                        <p>THIS WILL NOT PAY YOU AS OF RIGHT NOW. You can add the bot and try it out if you want lol. Submitted to EngHacks 2021. </p>
+                    </section>
+			
+			
+			
+			
 
                     <section>
                         <span>
