--- a/Home.html
+++ b/Home.html
@@ -224,7 +224,7 @@
 			<section>
                         <span>
                             <a href="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects">
-                                <img src="images/covid.png" alt="chAD" style="width:200px" style="height:60px">
+                                <img src="images/logo (1).png" alt="chAD" style="width:200px" style="height:60px">
                             </a>
                         </span>
                         <h3>chAD</h3>
