--- a/Home.html
+++ b/Home.html
@@ -235,7 +235,7 @@
 			
 			
 
-                    <section>
+                    <section class="center" style="padding-left: 15%;">
                         <span>
                             <a href="https://devpost.com/software/disgraph?ref_content=user-portfolio&ref_feature=in_progress">
                                 <img src="images/DisGraph.png" alt="HTN2020" style="width:200px" style="height:60px">
