--- a/Home.html
+++ b/Home.html
@@ -209,16 +209,6 @@
                         <p>Possibly my first big project. In 10th grade for my CS summative I had to create an interactive quiz game. Had to flex on my classmates with the on screen clickables and music and stuff. Good times.</p>
                     </section>
 
-                    <section>
-                        <span>
-                            <a href="https://github.com/FarzadR-Dev/CovidStatsSummaryGenerator">
-                                <img src="images/covid.png" alt="covidstats" style="width:200px" style="height:60px">
-                            </a>
-                        </span>
-                        <h3>Covid Stats Generator</h3>
-                        <p>*sigh* Yeah it was for an assignment I had in grade 11. I had to create a program that made stats by reading a file. So I decided to make my program read this reaaaaallllyyyyy looooooonggg files with covid stats where it outputs
-                            a new file with stats that the user asked for. </p>
-                    </section>
 			
 			
 			<section>
@@ -232,16 +222,36 @@
                     </section>
 			
 			
-			
-			
-
-                    <section class="center" style="padding-left: 15%;">
+		
+                    <section >
                         <span>
                             <a href="https://devpost.com/software/disgraph?ref_content=user-portfolio&ref_feature=in_progress">
                                 <img src="images/DisGraph.png" alt="HTN2020" style="width:200px" style="height:60px">
                             </a>
                         </span>
                         <p>Hack the North 2020++ Submission: A discord bot which can quickly generate a visual representation of a dataset through a discord server, as it is a common medium in which people use to communicate with. </p>
+                    </section>
+	
+                    <section>
+                        <span>
+                            <a href="https://github.com/FarzadR-Dev/CovidStatsSummaryGenerator">
+                                <img src="images/covid.png" alt="covidstats" style="width:200px" style="height:60px">
+                            </a>
+                        </span>
+                        <h3>Covid Stats Generator</h3>
+                        <p>*sigh* Yeah it was for an assignment I had in grade 11. I had to create a program that made stats by reading a file. So I decided to make my program read this reaaaaallllyyyyy looooooonggg files with covid stats where it outputs
+                            a new file with stats that the user asked for. </p>
+                    </section>
+			
+			<section>
+                        <span>
+                            <a href="https://www.transitionspace.ca/">
+                                <img src="https://www.transitionspace.ca/static/media/logo.28a61876.svg" alt="TransitionSpace" style="width:300px">
+                            </a>
+                        </span>
+                        <h3>Transition Space</h3>
+                        <p> Transition Space is an online resource hub dedicated to helping youth navigate the adult disability system. I got the pleasure of joining the team as 
+				an advisor providing feedback and guidance on UI features such as layout, form elements, databasing and user system.</p>
                     </section>
 
                 </div>
