--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,7 @@
         <!-- One -->
         <section id="one" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
-                <img src="images/image0.jpg" style="padding-top: 10px; padding-left: 5px; width: 500px" alt="me lol" data-position="center center" />
+                <img src="images/IMG_9340.jpg" style="padding-top: 10px; padding-left: 5px; width: 500px" alt="me lol" data-position="center center" />
                 <div class="content">
                     <div class="inner">
                         <h2>About Farzad</h2>
