--- a/Home.html
+++ b/Home.html
@@ -158,7 +158,7 @@
                     <section>
                         <span>
                             <a href="https://refillonline.github.io/">
-                                <img src="images/ReFillIcon" alt="Solution" style="width:200px" style="height: 200px">
+                                <img src="https://cdn.discordapp.com/attachments/772201659212365895/797899045737725992/iconReFillother.png" alt="Solution" style="width:200px">
                             </a>
                         </span>
                         <h3>ReFill</h3>
