--- a/Home.html
+++ b/Home.html
@@ -219,7 +219,7 @@
                         </span>
                         <h3>chAD</h3>
                         <p>THIS WILL NOT PAY YOU AS OF RIGHT NOW. You can add the bot and try it out if you want lol. Submitted to EngHacks 2021. </p>
-				<p src="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects"> DevPost Link</p>
+				<p href="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects"> DevPost Link</p>
                     </section>
 			
 			
