--- a/Home.html
+++ b/Home.html
@@ -60,9 +60,9 @@
                 <div class="content">
                     <div class="inner">
                         <h2>About Farzad</h2>
-                        <p> Hi! I'm Farzad, a senior at Waterloo Collegiate Institute going into Computer Engineering at the University of Waterloo. I'm an avid programmer working very frequently with java, python and occasionally unity 3D (C# for scripting).
+                        <p> Hi! I'm Farzad, a first year computer engineering student at the University of Waterloo and a developer working very frequently with java, python (learning C++) and occasionally unity 3D (C# for scripting).
                             <br>
-                            <br> Outside of class and programming, you'd find me playing video games, soccer, tennis or basketball with friends. I also play piano, violin, guitar and sometimes produce with a launchpad mkII for fun.
+                            <br> Outside of class and programming, you'd find me playing video games, soccer, volleyball, tennis or basketball with friends. I also play piano, violin, guitar and sometimes produce and play with a launchpad mk II.
                             <br>
                             <br> Based in Waterloo, I often bike/skate around the city, so feel free to say hi! </p>
                         <!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
