--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="#intro" class="scrolly">Welcome</a></li>
                     <li><a href="#one" class="scrolly">About</a></li>
-                 
+
                     <li><a href="#three" class="scrolly">Sites</a></li>
                     <li><a href="#four" class="scrolly">Projects</a></li>
                 </ul>
@@ -73,7 +73,7 @@
         </section>
 
         <!-- Two -->
-<!--         <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
+        <!--         <section id="two" style="background-color: #062a38b0;" class="wrapper style2 spotlights">
             <section>
                 <div class="row">
                     <div class="column">
@@ -164,8 +164,8 @@
                         <h3>ReFill</h3>
                         <p>Okay now this is actually a cool thing in the works right now. You'll be really excited if you are involved in any way.</p>
                     </section>
-			
-			<section class="center" style="padding-left: 15%;">
+
+                    <section class="center" style="padding-left: 15%;">
 
                         <a href="https://www.youtube.com/channel/UCxgxN6_o2_jEU_4zAKd91pA">
                             <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" alt="YouTube" style="width:200px" style="height: 200px">
@@ -209,9 +209,9 @@
                         <p>Possibly my first big project. In 10th grade for my CS summative I had to create an interactive quiz game. Had to flex on my classmates with the on screen clickables and music and stuff. Good times.</p>
                     </section>
 
-			
-			
-			<section>
+
+
+                    <section>
                         <span>
                             <a href="https://tyseer2335.github.io/chAD-Bot/">
                                 <img src="images/logo (1).png" alt="chAD" style="width:200px" style="height:60px">
@@ -219,20 +219,36 @@
                         </span>
                         <h3>chAD</h3>
                         <p>THIS WILL NOT PAY YOU AS OF RIGHT NOW. You can add the bot and try it out if you want lol. Submitted to EngHacks 2021. </p>
-				<a href="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects"> DevPost Link</a>
+                        <a href="https://devpost.com/software/chad-the-ad-bot-for-discord-servers?ref_content=my-projects-tab&ref_feature=my_projects"> DevPost Link</a>
                     </section>
-			
-			
-		
-                    <section >
+
+
+
+                    <section>
                         <span>
                             <a href="https://devpost.com/software/disgraph?ref_content=user-portfolio&ref_feature=in_progress">
                                 <img src="images/DisGraph.png" alt="HTN2020" style="width:200px" style="height:60px">
                             </a>
                         </span>
+                        <h3>DisGraph</h3>
                         <p>Hack the North 2020++ Submission: A discord bot which can quickly generate a visual representation of a dataset through a discord server, as it is a common medium in which people use to communicate with. </p>
                     </section>
-	
+
+
+                    <section>
+                        <span>
+                            <a href="https://joonsauce.me/testsite/">
+                                <img src="https://joonsauce.me/testsite/eavesdropping.png" alt="HTN2021" style="width:200px" style="height:60px">
+                            </a>
+                        </span>
+                        <h3>MemorAudio</h3>
+                        <a href="https://devpost.com/software/memoraudio"> Learn More</a>
+                        <p>Hack the North 2021 Submission: This hackathon was a mess for us. I could go over everything that went wrong and how much this affected my mental, but I won't.
+                            <br>Basically worked on website and some of VoiceFlow structuring. Conjured ideas and vision. And caught up on Math 115 and ECE 150 assignments. BTW Joon hard carried.
+                        </p>
+                    </section>
+
+
                     <section>
                         <span>
                             <a href="https://github.com/FarzadR-Dev/CovidStatsSummaryGenerator">
@@ -243,16 +259,18 @@
                         <p>*sigh* Yeah it was for an assignment I had in grade 11. I had to create a program that made stats by reading a file. So I decided to make my program read this reaaaaallllyyyyy looooooonggg files with covid stats where it outputs
                             a new file with stats that the user asked for. </p>
                     </section>
-			
-			<section>
+
+
+
+                    <section>
                         <span>
                             <a href="https://www.transitionspace.ca/">
                                 <img src="https://www.transitionspace.ca/static/media/logo.28a61876.svg" alt="TransitionSpace" style="width:300px">
                             </a>
                         </span>
                         <h3>Transition Space</h3>
-                        <p> Transition Space is an online resource hub dedicated to helping youth navigate the adult disability system. I got the pleasure of joining the team as 
-				an advisor providing feedback and guidance on UI features such as layout, form elements, databasing and user system.</p>
+                        <p> Transition Space is an online resource hub dedicated to helping youth navigate the adult disability system. I got the pleasure of joining the team as an advisor providing feedback and guidance on UI features such as layout, form
+                            elements, databasing and user system.</p>
                     </section>
 
                 </div>
