--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <br></br>contains even more sites, projects,
             <br></br>
             <br></br> and and intro to Farzad.
+ <br></br>
+            <br></br>  <br></br>
+         WARNING: Their is audio, I recommend you turn your audio a bit down.
 
         </h3>
     </a>
