--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </a>
 
 
-    <a href="https://farzadr.me/" class="box3">
+    <a href="https://farzadr.me/intro.html" class="box3">
         <h2 style="text-align: center; vertical-align:middle;"><img src="https://icon-library.com/images/vector-house-icon/vector-house-icon-8.jpg"></h2>
         <br></br>
         <h3 style="text-align: center; color: white; padding: 1%;">The Main Page
@@ -43,7 +43,7 @@
             <br></br> and and intro to Farzad.
  <br></br>
             <br></br>  <br></br>
-         WARNING: Their is audio, I recommend you turn your audio a bit down.
+WARNING: Their is audio, I recommend you turn your audio a bit <br></br> down.
 
         </h3>
     </a>
