--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <br></br> and and intro to Farzad.
  <br></br>
             <br></br>  <br></br>
-WARNING: Their is audio, I recommend you turn your audio a bit <br></br> down.
+WARNING: There is audio, I recommend you turn your audio a bit <br></br> down.
 
         </h3>
     </a>
