--- a/Home.html
+++ b/Home.html
@@ -26,6 +26,7 @@
 
                     <li><a href="#three" class="scrolly">Sites</a></li>
                     <li><a href="#four" class="scrolly">Projects</a></li>
+			<li><a href="https://farzadr.me/resumes.html">Résumé</a></li>
                 </ul>
             </nav>
         </div>
