--- a/Home.html
+++ b/Home.html
@@ -37,7 +37,7 @@
         <!-- Intro -->
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <video autoplay="autoplay" loop="loop" id="vid">
-                <source src="images/vid.mp4" type="video/mp4" width="1040">
+                <source src="images/newvid.mp4" type="video/mp4" width="1040">
             </video>
             <div class="inner">
 
