--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ WARNING: There is audio, I recommend you turn your audio a bit <br></br> down.
         </h3>
     </a>
 
-    <a href="https://www.linkedin.com/in/farzad-rahman-929ab5191/" class="box3">
+    <a href="https://www.linkedin.com/in/farzadrahman/" class="box3">
         <h2 style="text-align: center; vertical-align:middle;"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"></h2>
         <br></br>
         <h3 style="text-align: center; color: white; padding:1%">My LinkedIn
